[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Menu.tres" type="Theme" id=3]
[ext_resource path="res://UI/left.png" type="Texture" id=4]
[ext_resource path="res://UI/right.png" type="Texture" id=5]
[ext_resource path="res://Player/Player.png" type="Texture" id=6]
[ext_resource path="res://Player/Minotaur - edit.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="Theme" id=4]
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = SubResource( 3 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Roll"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0 ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="HBoxContainer"]
show_behind_parent = true
margin_right = 160.0
margin_bottom = 130.0
rect_min_size = Vector2( 160, 130 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/PopupMenu"]
margin_right = 160.0
margin_bottom = 130.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0.0705882, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/PopupMenu/VBoxContainer"]
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Controls:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roll" type="Button" parent="HBoxContainer/PopupMenu/VBoxContainer"]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 54.0
focus_neighbour_top = NodePath("../Run")
focus_neighbour_bottom = NodePath("../Attack")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Roll"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="HBoxContainer/PopupMenu/VBoxContainer"]
margin_top = 58.0
margin_right = 160.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../Roll")
focus_neighbour_bottom = NodePath("../Run")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Attack"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="HBoxContainer/PopupMenu/VBoxContainer"]
margin_top = 87.0
margin_right = 160.0
margin_bottom = 112.0
focus_neighbour_bottom = NodePath("../Roll")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Run"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 130.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="HBoxContainer/MenuButtons"]
margin_left = 34.0
margin_right = 126.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../Quit")
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Start Game"
flat = true

[node name="Controls" type="Button" parent="HBoxContainer/MenuButtons"]
margin_left = 44.0
margin_top = 29.0
margin_right = 115.0
margin_bottom = 54.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Controls"
flat = true

[node name="Quit" type="Button" parent="HBoxContainer/MenuButtons"]
margin_left = 59.0
margin_top = 58.0
margin_right = 100.0
margin_bottom = 83.0
focus_neighbour_bottom = NodePath("../Start")
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
theme = ExtResource( 3 )
text = "Quit"
flat = true

[node name="CharacterSelect" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 300.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CharacterSelect"]
margin_left = 10.0
margin_right = 125.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "Character Select"
align = 1
valign = 1

[node name="SelectionTextures" type="HBoxContainer" parent="HBoxContainer/CharacterSelect"]
margin_top = 34.0
margin_right = 136.0
margin_bottom = 79.0

[node name="LeftArrow" type="TextureButton" parent="HBoxContainer/CharacterSelect/SelectionTextures"]
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteContainer" type="HBoxContainer" parent="HBoxContainer/CharacterSelect/SelectionTextures"]
margin_left = 49.0
margin_right = 90.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Sprite" type="Sprite" parent="HBoxContainer/CharacterSelect/SelectionTextures/SpriteContainer"]
position = Vector2( 22.4166, 22.9996 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 6 )
hframes = 60
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/CharacterSelect/SelectionTextures/SpriteContainer/Sprite"]
anims/Attack = SubResource( 8 )
anims/RESET = SubResource( 5 )
anims/Roll = SubResource( 7 )
anims/Run = SubResource( 6 )

[node name="BullSprite" type="Sprite" parent="HBoxContainer/CharacterSelect/SelectionTextures/SpriteContainer"]
visible = false
position = Vector2( 17.0712, 26.1177 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
hframes = 9
vframes = 20

[node name="RightArrow" type="TextureButton" parent="HBoxContainer/CharacterSelect/SelectionTextures"]
margin_left = 94.0
margin_right = 136.0
margin_bottom = 45.0
rect_min_size = Vector2( 35, 35 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls_info_richlabel" type="RichTextLabel" parent="HBoxContainer/CharacterSelect"]
margin_top = 83.0
margin_right = 136.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
scroll_active = false

[connection signal="popup_hide" from="HBoxContainer/PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
[connection signal="pressed" from="HBoxContainer/PopupMenu/VBoxContainer/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="HBoxContainer/PopupMenu/VBoxContainer/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="HBoxContainer/PopupMenu/VBoxContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="HBoxContainer/MenuButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/MenuButtons/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="HBoxContainer/MenuButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="HBoxContainer/CharacterSelect/SelectionTextures/LeftArrow" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CharacterSelect/SelectionTextures/RightArrow" to="." method="_on_TextureButton_pressed"]
